[package]
name = "posting"
version = "0.1.0"
edition = "2024"

[dependencies]
common = { path = "../../crates/common" }
actix-web = "4.13.0"
dotenvy = "0.15.7"
envy = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["mysql", "runtime-tokio"] }
